a few bug fixes

--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -462,7 +462,7 @@
                     </button>
 
                     <!-- Confirm Conversion Button -->
-                    <button type="button" class="btn btn-primary w-100" (click)="acceptQuote()">
+                    <button type="button" class="btn btn-primary w-100" (click)="convertToNormalQuote()">
                         {{'gis.quotation.confirm_conversion' | translate}}
                     </button>
                 </div>
