--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -22,7 +22,7 @@
         </ngx-spinner>
 
         <div class="text-black fw-bold d-flex justify-content-center mb-4 fs-6">
-          Overview Summary
+          {{ "lms.ind.quotations.overview_summary" | translate }}
         </div>
 
         <div class="container">
@@ -30,15 +30,15 @@
             <div class="col-md-6">
               <div class="m-4">
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Client Name: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.client_name" | translate }}: </span>
                   <span class="fw-light">{{ client_details?.firstName || ''  }} {{client_details?.lastName || '' }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Payment Status: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.payment_status" | translate }}: </span>
                   <span class="fw-light">{{ summaryRecord['payment_status']  | titlecase}}</span>
                 </div>
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Sum assured: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.sum_assured" | translate }}: </span>
                   <span class="fw-light">{{ summaryRecord['sum_insured'] | number}}</span>
                 </div>
               </div>
@@ -47,17 +47,17 @@
             <div class="col-md-6">
               <div class="m-4">
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Product: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.product" | translate }}: </span>
                   <span class="fw-light">{{
                     productList | product : summaryRecord['product_code'] | titlecase
                   }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Currency: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.currency" | translate }}: </span>
                   <span class="fw-light">{{ "NGN" }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
-                  <span class="font-grey__font-eight__700">Premium: </span>
+                  <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.premium" | translate }}: </span>
                   <span class="fw-light">{{ summaryRecord['premium'] | number}}</span>
                 </div>
               </div>
@@ -70,7 +70,7 @@
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                   aria-expanded="false" aria-controls="flush-collapseOne">
-                    Client Details
+                    {{ "lms.ind.quotations.client_details" | translate }}
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -79,24 +79,24 @@
                     <div class="col-md-6">
                       <div class="m-4">
                         <div class="d-flex justify-content-between">
-                          <span class="font-grey__font-eight__700">Name: </span>
+                          <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.name" | translate }}: </span>
                           <span class="fw-light">{{client_details?.firstName || ''  | titlecase }} {{client_details?.lastName || '' | titlecase }}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">
-                            Date of Birth:
+                            {{ "lms.ind.quotations.dob" | translate }}:
                           </span>
                           <span class="fw-light">{{ client_details?.dateOfBirth | date:'dd/MM/yyyy'}}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">
-                            Physical Address:
+                            {{ "lms.ind.quotations.physical_address" | translate }}:
                           </span>
                           <span class="fw-light">{{ client_details?.physicalAddress | titlecase}}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">
-                            Nationality:
+                            {{ "lms.ind.quotations.nationality" | translate }}:
                           </span>
                           <span class="fw-light">{{countryList | nationality: client_details?.country | titlecase}}</span>
                         </div>
@@ -107,13 +107,13 @@
                       <div class="m-4">
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">
-                            Country of Residence:
+                            {{ "lms.ind.quotations.residence_country" | translate }}:
                           </span>
                           <span class="fw-light">{{countryList | country: client_details?.country | titlecase}}</span>
                         </div>
                         <div class="d-flex justify-content-between">
                           <span class="font-grey__font-eight__700">
-                            Gender:
+                            {{ "lms.ind.quotations.gender" | translate }}:
                           </span>
                           <span class="fw-light">{{ summaryRecord['gender']==='M' ? "Male":"Female" | titlecase }}</span>
                         </div>
@@ -134,7 +134,7 @@
                 <button class="accordion-button collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
                   aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Cover Types
+                    {{ "lms.ind.quotations.cover_types" | translate }}
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse"
@@ -174,7 +174,7 @@
                 <button class="accordion-button collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
                   aria-expanded="false" aria-controls="flush-collapseThree">
-                    Beneficiaries, Dependants, Trustees
+                    {{ "lms.ind.quotations.benef_deps_trust" | translate }}
                 </button>
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse"
@@ -185,7 +185,7 @@
                       <div class="col-md-6">
                         <div class="m-4">
                           <div class="d-flex justify-content-between">
-                            <span class="font-grey__font-eight__700">Name: </span>
+                            <span class="font-grey__font-eight__700">{{ "lms.ind.quotations.name" | translate }}: </span>
                             <span class="fw-light">{{ beneficiary['beneficiary_info']['first_name'] +' '+beneficiary['beneficiary_info']['first_name'] | uppercase }}</span>
                           </div>
                           <div class="d-flex justify-content-between">
@@ -196,7 +196,7 @@
                           </div>
                           <div class="d-flex justify-content-between">
                             <span class="font-grey__font-eight__700">
-                              Date of Birth:
+                              {{ "lms.ind.quotations.dob" | translate }}:
                             </span>
                             <span class="fw-light">{{ beneficiary['beneficiary_info']['date_of_birth'] |date:'short' }}</span>
                           </div>
@@ -229,7 +229,7 @@
                 <button class="accordion-button collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
                   aria-expanded="false" aria-controls="flush-collapseFour">
-                    Documents
+                    {{ "lms.ind.quotations.documents" | translate }}
                 </button>
               </h2>
               <div id="flush-collapseFour" class="accordion-collapse collapse"
@@ -251,7 +251,7 @@
                       </div>
                     </div>
                     <div *ngIf="documentList?.length===0" style="color: red;">
-                      No Document Available!!
+                      {{ "lms.ind.quotations.no_document_available" | translate }}!!
                     </div>
                     </div>
                     <div class="col-12">
@@ -284,7 +284,7 @@
                 font-weight: 600; color: var(--primary-color);">
               <div style="font-size: 1.3em; cursor: pointer">
                 <button (click)="nextPage()" type="button" class="text-end-view mx-1" style="padding: 0.6em; width: 7rem">
-                  Complete
+                  {{ "lms.ind.quotations.complete" | translate }}
                 </button>
               </div>
             </div>
@@ -297,7 +297,7 @@
   <div class="d-flex justify-content-between mt-3 action-buttons-container" style="padding-bottom: 2rem">
     <button routerLink="/home/lms/ind/quotation/medical-history" type="button"
         class="btn btn-primary btn-sm" style="padding: 0.6em">
-      <i class="fa-solid fa-arrow-left"></i> Previous
+      <i class="fa-solid fa-arrow-left"></i> {{ "lms.ind.quotations.back" | translate }}
     </button>
   </div>
 </div>
