--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -280,7 +280,7 @@
                                             <input type="text" id="carRegNo" class="form-control form-control-sm mb-1"
                                                 [formControlName]="field.name"
                                                 (input)="updateCarRegNoValue($event); validateCarRegNo(); transformToUpperCase($event)"
-                                                placeholder="e.g KCA 345R" [ngModel]="parsedCarRegNo">
+                                                placeholder="e.g KCA 345R" [(ngModel)]="parsedCarRegNo">
 
 
                                             <div *ngIf="carRegNoHasError" class="form-text text-danger">
@@ -297,11 +297,8 @@
                                                 </div>
 
                                             </div>
-
-
-
-
                                         </div>
+
                                         <div *ngIf="field.name == 'modeOfTransport'">
                                             <label class="quote-label required" [for]="field.name">{{ field.label
                                                 }}</label>
